# geo-synth-bench

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pyrightconfig.json
notebooks/: explo.ipynb
scripts/: render_debug.py
src/config/: config.py  rng.py
src/geosynthbench/: __init__.py
src/geosynthbench/changes/: change_log.py  operators.py
src/geosynthbench/config/: schemas.py
src/geosynthbench/core/: geometry.py  logging.py  regions.py  rng.py  stats.py  types.py  versioning.py
src/geosynthbench/dataset/: record.py
src/geosynthbench/pipeline/: generate_one.py
src/geosynthbench/render/: annotations.py  palettes.py  raster_renderer.py
src/geosynthbench/world/: constraints.py  entities.py  generator.py  world_state.py
